2017-02-23         Arnold D. Robbins     <arnold@skeeve.com>

	* awk.h (boolval): Return bool instead of int.
	* eval.c (eval_condition): Same.
	* io.c (pty_vs_pipe): Same
	Thanks to Andrew Schorr for pointing these out.

2017-02-21         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* NEWS: Document that mktime now takes an optional utc-flag argument.
	* awkgram.y (tokentab): Modify mktime entry to indicate that it may
	accept two arguments.
	* builtin.c (mktime_tz): New function to run mktime in an arbitrary
	time zone. Code was copied from the Linux timegm man page.
	(do_mktime): Add support for new optional 2nd argument utc-flag by
	using the new mktime_tz function.
	(do_strftime): Change do_gmt type from int to bool.

2017-02-17         Arnold D. Robbins     <arnold@skeeve.com>

	* builtin.c (do_typeof): Handle arguments that have
	the NULL_FIELD flag set.

2017-02-03         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* awkgram.y (set_profile_text): Improve code clarity by using emalloc
	to allocate the string instead of abusing estrdup.

2017-02-02         Arnold D. Robbins     <arnold@skeeve.com>

	* awkgram.y (set_profile_next): Allocate an extra byte at the
	end for the NUL in case we add a sign. Thanks to Andrew Schorr
	for making me look at this code.

	And later in the same day:

	* awkgram.y (set_profile_next): Undo previous change, since estrdup
	handles it, but updated the comments.

2017-02-01         Arnold D. Robbins     <arnold@skeeve.com>

	* builtin.c (mbc_char_count): Remove spurious multiplies by
	gawk_mb_cur_max. Thanks to Andrew Schorr for making me look
	at this code.

	Unrelated:

	* awkgram.y (make_profile_number): Renamed to ...
	(set_profile_next): New function. All calls adjusted. Also improved
	use at MPFR number case.

2017-01-27         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* interpret.h [UNFIELD]: Fix condition for assignment from