@@ -1,0 +1,15 @@
+a is local: true
+b is local: true
+c is local: true
+
+a is local: false
+b is local: true
+c is local: true
+
+a is local: false
+b is local: false
+c is local: true
+
+a is local: false
+b is local: true
+c is local: true
