@@ -1,3 +1,8 @@
+2017-02-23         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* islocal.c: New file.
+	* Makefile.am: Add support for new `islocal' extension.
+
 2017-01-21  Eli Zaretskii  <eliz@gnu.org>
 
 	* testext.c (getuid) [__MINGW32__]: New function, mirrors what
