@@ -1,3 +1,8 @@
+2017-02-23         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (islocal): New test.
+	* islocal.awk, islocal.ok: New files.
+
 2017-02-21         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
 	* Makefile.am (mktime): New test.
