@@ -1,5 +1,15 @@
 2017-02-23         Arnold D. Robbins     <arnold@skeeve.com>
 
+	* awk.h (LOCAL): New flag, for local variables in functions.
+	* eval.c (flags2str): Add entry for LOCAL.
+	(setup_frame): Set the flag for local variables.
+	* gawkapi.h (awk_value_t): Add new member is_local indicating
+	value came from a local variable in a function.
+	* gawkapi.c (api_get_argument): Set result->is_local based
+	on the LOCAL flag.
+
+2017-02-23         Arnold D. Robbins     <arnold@skeeve.com>
+
 	* awk.h (boolval): Return bool instead of int.
 	* eval.c (eval_condition): Same.
 	* io.c (pty_vs_pipe): Same
